--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@internationalized/date": "^3.5.5",
     "@nextui-org/react": "^2.4.6",
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.52.0",
     "axios": "^1.7.4",
     "framer-motion": "^11.3.28",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
+    "react-charts": "^3.0.0-beta.57",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
@@ -18,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "sweetalert": "^2.1.2",
+    "swiper": "^11.1.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
